[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Instances/Actors/UI/AccountUI.gd" type="Script" id=1]

[node name="AccountUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -360.0
offset_right = 171.0
offset_bottom = 363.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
offset_top = 283.0
offset_right = 341.0
offset_bottom = 303.4
text = "Key"
align = 1
valign = 1

[node name="KeyInput" type="LineEdit" parent="VBoxContainer"]
offset_top = 307.0
offset_right = 341.0
offset_bottom = 331.0
align = 1
max_length = 32
secret = true
placeholder_text = "Enter a unique key"

[node name="Label2" type="Label" parent="VBoxContainer"]
offset_top = 333.0
offset_right = 341.0
offset_bottom = 353.4
text = "Password"
align = 1
valign = 1

[node name="PasswordInput" type="LineEdit" parent="VBoxContainer"]
offset_top = 357.0
offset_right = 341.0
offset_bottom = 381.0
align = 1
secret = true
clear_button_enabled = true
placeholder_text = "Type your password here"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
offset_top = 384.0
offset_right = 341.0
offset_bottom = 388.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 391.0
offset_right = 341.0
offset_bottom = 416.0
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 19.0
offset_right = 94.0
offset_bottom = 25.0
minimum_size = Vector2( 75, 25 )
text = "Login"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 97.0
offset_right = 172.0
offset_bottom = 25.0
minimum_size = Vector2( 75, 25 )
text = "Sign up"

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 175.0
offset_right = 321.0
offset_bottom = 25.0
minimum_size = Vector2( 75, 25 )
text = "Generate Random Key"

[node name="WarningLabel" type="Label" parent="VBoxContainer"]
offset_top = 418.0
offset_right = 341.0
offset_bottom = 438.4
text = "Never share your key or password with anyone."
align = 1
valign = 1
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Button3" to="." method="_on_Button3_button_down"]
